third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/alternative_clashes_with_variant.stderr
error: The discriminant '2' collides with a value attributed to a previous variant
 --> tests/try_build/compile_fail/alternative_clashes_with_variant.rs:7:5
  |
7 |     Two = 2,
  |     ^^^
